--- a/Style.css
+++ b/Style.css
@@ -8,9 +8,36 @@ body {
     
 }
 
+.container{
+    width: 100%;
+    height: 10%;
+    background: scroll;
+    background-color: rgb(218, 217, 217);
+    color: beige;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: ;
+    align-items: center;
+    justify-content: space-between;
+    text-size-adjust: auto;
+    text-align-last: center;
+    margin: auto;
+    border-top: dotted grey;
+    border-bottom: dotted grey;
+}
+
+.nav, .main, .sidebar {
+    text-decoration: none;
+}
+
+.selfie{
+    justify-content: space-between;
+}
+
 #title, .subtitle, .post_title, .post_image{
     color: rgb(57, 59, 71)
     text-align: justify;
+    text-decoration: none;
 } 
 
 .post_title{
@@ -26,33 +53,47 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
      margin: 7px;
      border: 3px solid black;  
      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
-     text-transform: lowercase;
-     text-transform: capitalize;
+
  }
 
  .post_image{
      border-radius: 100%;
  }
  
- .container_grid{
-     width: 100%;
-     height: 30%;
-     background: scroll;
-     background-color: rgb(218, 217, 217);
-     display: auto;
-     align-items: center;
-     margin: auto;
-     justify-content: space-between;
- }
- 
- .menu{
-     width: 100%;
-     height: 30%;
-     display: flex;
-     justify-content: space-between;
- }
-
  .contact_list{
 list-style-type: none;
 padding-left: 15px;
+text-decoration: none;
+}
+
+.footer {
+    width: 100%;
+    height: 10%;
+    background: scroll;
+    background-color: rgb(218, 217, 217);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-content: space-between;
+    text-size-adjust: auto;
+    text-align: center;
+    margin: auto;
+    border-top: dotted;
+    border-bottom: dotted;
+}
+
+.subtitle {
+    border-right: dotted;
+}
+
+.logo {
+    border-radius: 100%;
+    margin: center;
+}
+
+.link {
+    text-align: center;
+    margin: center;
+    text-decoration: none;
 }
