--- a/Style.css
+++ b/Style.css
@@ -5,18 +5,17 @@ body {
     border-right: 5px  grey;
     border-width: 5px  grey; 
     width: auto;
-    
 }
 
 .container{
     width: 100%;
     height: 10%;
+    text-decoration: none;
     background: scroll;
     background-color: rgb(218, 217, 217);
-    color: beige;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: ;
+    grid-template-rows: auto;
     align-items: center;
     justify-content: space-between;
     text-size-adjust: auto;
@@ -24,21 +23,23 @@ body {
     margin: auto;
     border-top: dotted grey;
     border-bottom: dotted grey;
+    font-family: cursive;
 }
 
-.nav, .main, .sidebar {
+#nav, .main{
     text-decoration: none;
 }
 
 .selfie{
     justify-content: space-between;
+    margin: 0%;
 }
 
 #title, .subtitle, .post_title, .post_image{
-    color: rgb(57, 59, 71)
+    color: rgb(57, 59, 71);
     text-align: justify;
     text-decoration: none;
-} 
+}
 
 .post_title{
 font-size: 16px; 
@@ -52,7 +53,8 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
      padding: 10px 5px 0;
      margin: 7px;
      border: 3px solid black;  
-     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
+     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+     grid-template-columns: 1fr 1fr;  
 
  }
 
@@ -69,22 +71,18 @@ text-decoration: none;
 .footer {
     width: 100%;
     height: 10%;
-    background: scroll;
+    background: fixed;
     background-color: rgb(218, 217, 217);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: auto;
     align-items: center;
     justify-content: space-between;
     text-size-adjust: auto;
     text-align: center;
-    margin: auto;
+    margin: center;
     border-top: dotted;
     border-bottom: dotted;
-}
-
-.subtitle {
-    border-right: dotted;
 }
 
 .logo {
